@@ -14,6 +14,14 @@
 2.将代码放入git版本控制
 3.用户管理
 4.生成时是否覆盖原来的文件，通过配置来决定是否覆盖
+2012-12-17
+1.将代码托管到github中，密码为:123456
+2.修改了生成doordomain.ftl模板,数据库类型和java类型自动对应
+
+
+
+
+
 
 
 
